Replaced element json with Jackson